Show posts and fix z-index issues

--- a/_scss/layout/_subpage-masthead.scss
+++ b/_scss/layout/_subpage-masthead.scss
@@ -1,11 +1,7 @@
 .subpage-header {
   position: relative;
-  padding: 100px 0 40px;
+  padding: 3rem 0 40px;
   text-align: center;
-
-  @include breakpoint(medium) {
-    padding: 160px 0 80px;
-  }
 }
 
 .subpage-header a {
