--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -782,14 +782,13 @@ li{margin-bottom:.85rem}.lead{margin-bottom:2.5rem;font-weight:400}.lead.min{mar
 .headroom--top .menu li li.is-dropdown-submenu-parent>a::after{border-color:#fff transparent transparent;opacity:1}
 .headroom--top .menu .menu a{color:#fff}.headroom--top .menu .menu a:hover{background:#b52bc9}
 .dropdown.menu>li.is-dropdown-submenu-parent>a{padding-right:1.1rem}@media screen and (max-width:55.5625em){.headroom--not-top .logo path{fill:#fff}
-.is-dropdown-submenu-parent{position:static}.menu>li>a{padding:.7rem}}@media print,screen and (min-width:55.625em){.headroom{position:static !important;height:auto}
+.is-dropdown-submenu-parent{position:static}.menu>li>a{padding:.7rem}}@media print,screen and (min-width:55.625em){.headroom{position:relative !important;height:auto}
 .title-bar{background:#fff !important}.title-bar-right{padding:1rem}.logo{margin-top:1rem;margin-left:1rem;width:280px;height:100%}
 }.home-content{position:relative;z-index:2;margin-top:3rem}.home-content>:last-child{padding-bottom:3rem}
-.subpage-content{padding-bottom:100px;margin-top:-4%;position:relative;z-index:2}
-.subpage-content .section-pad:first-child{padding-top:0}.subpage-header{position:relative;padding:100px 0 40px;text-align:center}
-@media print,screen and (min-width:55.625em){.subpage-header{padding:160px 0 80px}
-}.subpage-header a{text-decoration:none}.footer{padding-top:2rem;padding-bottom:2rem;background:#6d0f84}
-.footer p,.footer a,.footer small{color:#fff}.footer a,.footer svg,.footer path,.footer polygon,.footer rect,.footer g{transition:all 400ms ease}
+.subpage-content{padding-bottom:100px}.subpage-content .section-pad:first-child{padding-top:0}
+.subpage-header{position:relative;padding:3rem 0 40px;text-align:center}.subpage-header a{text-decoration:none}
+.footer{padding-top:2rem;padding-bottom:2rem;background:#6d0f84}.footer p,.footer a,.footer small{color:#fff}
+.footer a,.footer svg,.footer path,.footer polygon,.footer rect,.footer g{transition:all 400ms ease}
 .footer .legal{display:block}.footer-logo{position:relative;z-index:2;display:block;margin:0 auto 1.5em;width:240px}
 .footer-logo svg{max-width:100%;height:auto}.footer-logo path{fill:#fff}.footer-nav{margin:0;padding:0;font-size:1.15385rem;font-weight:bold;list-style:none}
 .footer-nav a{display:block;padding:.25em .5em;color:#fff}@media print,screen and (min-width:55.625em){.footer-nav{text-align:center}
